[package]
name = "klipper_estimator_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
lexical-core = "0.7"
glam = "0.17"
clap = "3.0.0-beta.4"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
