[package]
name = "klipper_estimator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
lexical-core = "^0.7"
serde = { version = "^1", features = ["derive"] }
glam = { version = "0.20", features = ["serde"] }
thiserror = "1"
