[package]
name = "lib_klipper"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
lexical-core = "^0.7"
serde = { version = "^1", features = ["derive"] }
glam = { version = "0.21", features = ["serde"] }
thiserror = "1"
regex = "1"
lazy_static = "1"
minijinja = { version = "^0.18", default-features = false, features = ["source", "sync", "debug"] }
serde_json = "^1"
