[package]
name = "tool"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
klipper_estimator = { path = "../lib" }
reqwest = { version = "^0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
deser-hjson = "^1"
once_cell = "1.8.0"

[build-dependencies]
vergen = "^5"
anyhow = "^1"
