[package]
name = "klipper_estimator"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
lib_klipper = { path = "../lib" }
reqwest = { version = "^0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
deser-hjson = "^1"
once_cell = "1.8.0"
regex = "1"
lazy_static = "1"
ordered-float = { version = "2", features = ["serde"] }
term_size = "0.3"
thiserror = "1"
config = { version = "0.13", features = ["json5"] }
git2 = "^0"
anyhow = "1"

[build-dependencies]
git2 = "^0"
anyhow = "1"
